--- a/valentineday/index.html
+++ b/valentineday/index.html
@@ -5,16 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Friends Forever 💙</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
+
 <body>
     <div class="container">
 
         <h1>Best Friends Forever 💙</h1>
         <p class="message">"A best friend is someone who makes your life brighter and happier!"</p>
-        <button class="button" onclick="showFact()">Why We're Best Friends? 💡</button>
-        <p id="fact"></p>
+        <button id="showFactButton" >Why We're Best Friends? 💡 Show Fact</button>
+        <!-- <p id="fact"></p> -->
 
+        <!-- <button id="showFactButton">Show Fact</button> -->
+        <div id="fact"></div> 
     </div>
+
+    
+ 
+
+   
+    <footer>
+        <p  class="life">&copy; Copyright <span  id="autoyear"></span> Best Friends </p>
+    </footer>
 
     <script src="app.js"></script>
 
